# engramdb

./: .gitignore  README.md  goal.md  onepager.md  paper_plan.md  pyproject.toml  research_plan.md
benchmarks/: __init__.py
benchmarks/baselines/: __init__.py  naive_rag.py  parent_doc_rag.py
benchmarks/datasets/: cuad_loader.py  multihop_generator.py  synthetic.py
benchmarks/evaluation/: analyze_hybrid_failures.py  benchmark.py  debug_hybrid.py  metrics.py  run_full_eval.py  statistics.py  tune_hybrid.py
scripts/: ingest_cuad.py
src/engramdb/: __init__.py  db.py
src/engramdb/core/: __init__.py  engram.py  synapse.py
src/engramdb/embeddings/: __init__.py  embedder.py
src/engramdb/ingestion/: __init__.py  definitions.py  parser.py  references.py
src/engramdb/retrieval/: __init__.py  graph.py  hybrid.py  vector.py
src/engramdb/storage/: __init__.py  duckdb.py
tests/: __init__.py  test_core.py  test_ingestion.py
